--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.5.3",
     "node-sass": "^4.14.1",
     "react": "^16.14.0",
+    "react-device-detect": "^1.14.0",
     "react-dom": "^16.13.1",
     "react-load-script": "0.0.6",
     "react-router-dom": "^5.2.0",
