--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
     "react": "^16.14.0",
     "react-device-detect": "^1.14.0",
     "react-dom": "^16.13.1",
+    "react-id-swiper": "^4.0.0",
     "react-load-script": "0.0.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-slick": "^0.27.12",
     "react-swipe": "^6.0.4",
-    "slick-carousel": "^1.8.1",
-    "swipe-js-iso": "^2.1.5"
+    "swipe-js-iso": "^2.1.5",
+    "swiper": "^6.3.4"
   },
   "scripts": {
     "start": "react-scripts start",
