--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
     "react": "^16.14.0",
     "react-device-detect": "^1.14.0",
@@ -21,6 +22,7 @@
     "react-scripts": "3.4.3",
     "react-slick": "^0.27.12",
     "react-swipe": "^6.0.4",
+    "slick-carousel": "^1.8.1",
     "swipe-js-iso": "^2.1.5",
     "swiper": "^6.3.4"
   },
