--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "leaflet": "^1.6.0",
-    "react-leaflet": "^2.7.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
@@ -13,12 +11,15 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "google-maps-react": "^2.0.6",
     "jquery": "^3.5.1",
+    "leaflet": "^1.6.0",
     "node-sass": "^4.14.1",
     "react": "^16.14.0",
     "react-device-detect": "^1.14.0",
     "react-dom": "^16.13.1",
     "react-id-swiper": "^4.0.0",
+    "react-leaflet": "^2.7.0",
     "react-load-script": "0.0.6",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
