--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "google-maps-react": "^2.0.6",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
@@ -12,6 +11,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "google-maps-react": "^2.0.6",
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
     "react": "^16.14.0",
@@ -25,7 +25,8 @@
     "react-swipe": "^6.0.4",
     "slick-carousel": "^1.8.1",
     "swipe-js-iso": "^2.1.5",
-    "swiper": "^6.3.4"
+    "swiper": "^6.3.4",
+    "typescript": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
