--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
+    "react-google-maps": "^9.4.5",
     "google-maps-react": "^2.0.6",
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
