--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
-    "react-google-maps": "^9.4.5",
     "google-maps-react": "^2.0.6",
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
     "react": "^16.14.0",
     "react-device-detect": "^1.14.0",
     "react-dom": "^16.13.1",
+    "react-google-login": "^5.1.25",
+    "react-google-maps": "^9.4.5",
     "react-id-swiper": "^4.0.0",
     "react-load-script": "0.0.6",
     "react-router-dom": "^5.2.0",
